fixed nav logo and body alignments

--- a/themes/inhabitant/sass/_navigation.scss
+++ b/themes/inhabitant/sass/_navigation.scss
@@ -34,7 +34,7 @@ a {
 	align-items: center;
 	width: 1000px;
 	.logo {
-		width: 100%;
+		width: auto;
 	}
 	ul {
 		display: flex;
