--- a/themes/inhabitant/sass/_page-templates.scss
+++ b/themes/inhabitant/sass/_page-templates.scss
@@ -1,13 +1,12 @@
 /*--------------------------------------------------------------
 # Page Templates
 --------------------------------------------------------------*/
-
+// Header
 .site {
     background: white;
     width: 100%;
     display: flex;
     flex-direction: column;
-    // max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -18,17 +17,22 @@
     border-bottom: 1px solid #e1e1e1;
 }
 
+// Web content
 .site-content {
-    width: 950px;
+    width: 1000px;
     align-self: center;
     padding: 1rem;
     display: flex;
+    padding-top: 0;
     .content-area {
         flex: 2;
+        padding-top: 35px;
+        border-right: 1px solid #e1e1e1;
         // background: orange;
     }
     .widget-area {
         flex: 1;
+        padding-top: 35px;
         // background: yellow;
     }
 }
