--- a/themes/inhabitant/style.css
+++ b/themes/inhabitant/style.css
@@ -441,7 +441,7 @@ a {
           align-items: center;
   width: 1000px; }
   .main-navigation .logo {
-    width: 100%; }
+    width: auto; }
   .main-navigation ul {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -672,21 +672,25 @@ object {
   border-bottom: 1px solid #e1e1e1; }
 
 .site-content {
-  width: 950px;
+  width: 1000px;
   -ms-flex-item-align: center;
       align-self: center;
   padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  padding-top: 0; }
   .site-content .content-area {
     -webkit-box-flex: 2;
         -ms-flex: 2;
-            flex: 2; }
+            flex: 2;
+    padding-top: 35px;
+    border-right: 1px solid #e1e1e1; }
   .site-content .widget-area {
     -webkit-box-flex: 1;
         -ms-flex: 1;
-            flex: 1; }
+            flex: 1;
+    padding-top: 35px; }
 
 .site-footer {
   background: black;
